src/main/kubernetes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: javaee-simplified
spec:
  selector:
    app: javaee-simplified
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
